# orc

./: .gitignore  CMakeLists.txt  README.md  build_ipk.sh  copy_request.sh  local_request.sh  requirements.txt
docker/: Dockerfile  build.sh
orc/: Makefile
src/: error.c  error.h  http.c  http.h  restconf-json.c  restconf-json.h  restconf-method.c  restconf-method.h  restconf-operations.c  restconf-operations.h  restconf.c  util.c  util.h  yang-util.c  yang-util.h  yang-verify.c  yang-verify.h
src/uci/: uci-util.c
test/acceptance/: test_restconf.tavern.yml  test_restconf_operations.tavern.yml
test/acceptance/allure-report/: 02c35604-20df-41dc-936c-0ddc89ed3960-result.json  02e68054-56d4-42a1-a387-51eb4527a423-attachment.yaml  0883b82d-9edb-4ee9-9a38-b5c73bdf3b3c-attachment.yaml  0fb160b6-e607-422d-ae55-0209d3fa5cd7-attachment.yaml  0fbef47e-1cf6-4f75-8f04-4aaa057cbd62-result.json  109be8a3-231c-4f30-9444-2c810096c2b5-result.json  13dacccf-2f7d-4cd6-aab6-6193e1b56b0b-attachment.yaml  150ee0c2-fd4c-4422-ab61-00338113395e-attachment.yaml  17bf20aa-add1-4be4-896b-1052dfbd915a-attachment.yaml  (+111 more)
yang/: yang2json.sh
yang/generated-for-openwrt/: yang.h
yang/yang-modules/: openwrt-measurement-operations.yang  openwrt-operations-extension.yang  openwrt-operations.yang  openwrt-system-operations.yang  restconf-example.yang
yang/yin/: example.yin  openwrt-measurement-operations.yin  openwrt-operations-extension.yin  openwrt-operations.yin  openwrt-system-operations.yin
yang/yin2json/: yin2json.py
yang/yin2json/template/: yang.h.templ
yin2json/: yin2json.py
(+3 files in other folders)
